# ci-cd

./: CMakeLists.txt  Dockerfile  deployment.yaml  main.cpp  palindrome.cpp  palindrome.h
.github/workflows/: build-and-test.yml
test/: CMakeLists.txt  test_palindrome.cpp
